--- a/src/app/pages/PropertyDetails/BookingCalendar/BookingCalendar.component.css
+++ b/src/app/pages/PropertyDetails/BookingCalendar/BookingCalendar.component.css
@@ -1,9 +1,10 @@
 /* Calendar Container Styles */
 .airbnb-calendar-container {
-  max-width: 1200px;
+  max-width: 810;
   margin: 0 auto;
   padding: 20px;
   font-family: 'Airbnb Cereal App', -apple-system, BlinkMacSystemFont, sans-serif;
+  overflow-x: hidden;
 }
 
 /* Calendar Wrapper */
@@ -24,7 +25,7 @@
 /* Main Calendar Styles */
 ::ng-deep .daterangepicker {
   width: 100% !important;
-  max-width: 1200px !important;
+  max-width: 840px !important;
   display: flex !important;
   flex-direction: row !important;
   padding: 0 !important;
