--- a/src/app/pages/property-info/property-info.css
+++ b/src/app/pages/property-info/property-info.css
@@ -18,11 +18,15 @@ html {
 body {
   overflow-x: hidden;
 }
+:host {
+  display: block;
+  overflow-x: hidden;
+}
 
 .property-details-box {
   /* border: 2px solid lightblue; */
   border-radius: 10px;
-  padding: 20px;
+  padding: 0px;
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
@@ -45,7 +49,6 @@ body {
 
 .tabs {
   display: flex;
-  flex-wrap: wrap;
   gap: 8px;
 }
 
