--- a/src/app/pages/PropertyDetails/amenities-section/amenities-section.component.css
+++ b/src/app/pages/PropertyDetails/amenities-section/amenities-section.component.css
@@ -87,6 +87,7 @@ body {
       flex-direction: column;
   align-items: start; 
   gap: 0.25rem;
+  margin-top: 2px;
 }
 
 .rating {
@@ -147,8 +148,8 @@ h2 {
 }
 
 .amenity-icon {
-    width: 24px; 
-    height: 24px;
+    width: 26px; 
+    height: 26px;
     object-fit: contain;
     flex-shrink: 0;
 }
@@ -158,7 +159,7 @@ h2 {
 }
 
 .amenity-name {
-    font-size: 16px; 
+    font-size: 18px; 
     color: #222;
     line-height: 1.4;
     white-space: nowrap; 
@@ -175,8 +176,9 @@ h2 {
     cursor: pointer;
     transition: all 0.2s ease;
     font-family: 'Airbnb Cereal App', 'Segoe UI', Roboto, sans-serif;
-    padding: 12px 24px; 
+    padding: 12px 12px; 
     color: #222; 
+    border-radius: 20px;
 }
 
 .show-all-btn:hover {
@@ -263,6 +265,7 @@ h2 {
     .show-all-btn {
         width: 100%;
         margin-top: 20px;
+        border-radius: 12px;
     }
 }
 
