--- a/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.css
+++ b/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.css
@@ -1,8 +1,10 @@
+
+
 hr {
-    width: 80%; /* Consistent width for horizontal rules */
+    width: 80%; 
     border: none;
-    border-top: 1px solid #1b1a1a; /* Lighter, more subtle line */
-    margin: 24px 0; /* Adjust margin for spacing */
+    border-top: 1px solid #1b1a1a; 
+    margin: 24px 0; 
     margin-left: 0;
     color: #171717;
     align-items: center;
@@ -10,10 +12,21 @@ hr {
 
 }
 
+.title{
+  font-weight: bold;
+  font-size: 25px !important;
+
+}
+
+.info{
+  /* font-weight: bold; */
+  font-size: 18px;
+}
 
 
 :host ::ng-deep .leaflet-container {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
+  width: 1200px !important;
+  height: 500px !important;
+  border-radius: 15px !important;
+  margin: 10px !important;
 }
