--- a/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.html
+++ b/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.html
@@ -4,10 +4,10 @@
 <p class="title mt-10 mb-2">Where you’ll be</p>
 <p class="info mb-3"> {{title}}, {{country}}, {{city}}</p>
 
-<div *ngIf="!loading" leaflet 
+<!-- <div *ngIf="!loading" leaflet 
      [leafletOptions]="options"
      [leafletZoom]="zoom"
      [leafletCenter]="center"
      [leafletLayers]="layers"
      style="height: 300px;">
-</div>
+</div> -->
